Fixed Nav Gap and Pricing Spacing
Played around w/ the spacing of the Pricing section and put a div around it to adjust said spacing. The sticky nav had a gap at the top when scrolling so top: 0; was added to fix that.

--- a/ProductStyles.css
+++ b/ProductStyles.css
@@ -13,6 +13,7 @@ header {
     justify-content: space-around;
     min-height: 75px;
     padding: 0 20px;
+    top: 0;
     background-color: white;
     align-items: center;
     
@@ -71,6 +72,13 @@ blockquote {
 
 #pricing {
     margin-top: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1000px;
+}
+
+#pricing-container {
     display: flex;
     justify-content: center;
 }
